--- a/template/Settings.json
+++ b/template/Settings.json
@@ -1,3 +1,5 @@
 {
-    "url": "http://admin:admin@localhost:8080/alfresco"
+    "url": "http://admin:admin@localhost:8080/alfresco",
+    "user": "admin",
+    "password": "admin"
 }
